# hyperscalenqs

./: .gitignore  pyproject.toml  submit_qps_sweep.py  tutorial.ipynb  tutorial.qmd
analysis/: count_parameters.py  plot_scaling.py
notebooks/: plotting.ipynb
notebooks/.ipynb_checkpoints/: plotting-checkpoint.ipynb
src/: adam.py  minsr.py  qps.py  qps_j1j2.py  qps_vit_j1j2.py  run_sgd.py  run_sgd_autoregressive.py  sr.py  vmc.py
src/1d/: minsr.py
src/2d/: ar_vit_rope_2d.py  ar_vit_rope_2d_cached.py  eval_hf_j1j2_square_sota.py  pwo_j1j2_square.py  qps_j1j2_square.py  qps_j1j2_square_kv_cache.py  vit_rope.py
src/llm/: auto.py  base_model.py  common.py  llm.py  rwkv7.py  rwkv7_qps.py  tokenizer.py  utils.py
src/scaling/: adam.py  qps.py
sweep/: run_adam_a100.slurm  run_all.sh  run_minsr.slurm  run_minsr_a100.slurm  run_pwo_j1j2_square.slurm  run_qps.slurm  run_qps_2d.slurm  run_qps_2d_sota.slurm  run_qps_2d_v2.slurm  run_qps_a100.slurm  run_qps_j1j2_a100.slurm  run_qps_llm.slurm  run_qps_vit_j1j2_a100.slurm  run_scaling_model.sh  run_scaling_samples.sh  run_scaling_system.sh  submit_minsr_grid.sh  submit_qps_grid.sh  sweep_pwo.py
sweep/1d/: relaunch_short_runs.py  run_adam.slurm  run_chains.sh  run_minsr.slurm  run_qps.slurm  run_scaling_model.sh  run_scaling_samples.sh  run_scaling_system.sh
sweep/scaling/: run_adam.slurm  run_minsr.slurm  run_qps.slurm  run_scaling_model.sh  run_scaling_samples.sh  run_scaling_system.sh
