[project]
name = "hyperscalenqs"
version = "0.1.0"
description = "HyperscaleNQS environment (NetKet + JAX CUDA12)"
requires-python = ">=3.11"
dependencies = [
  "jax[cuda12]",
  "netket[cuda]",
  "flax",
  "scipy",
  "tqdm",
  "matplotlib",
  "wandb",
  "hydra-core>=1.3.2",
  "huggingface-hub>=0.22",
  "tokenizers>=0.19",
  "pyrwkv-tokenizer>=0.9.1",
  "transformers>=4.40,<5.0",
  "torch>=2.11.0",
  "jupyter>=1.1.1",
  "fire>=0.7.1",
  "pandas>=3.0.2",
]

[project.optional-dependencies]
notebook = [
  "jupyterlab",
  "ipykernel",
]

[tool.uv]
# Do NOT try to build/install this repo as a package
package = false

[tool.uv.sources]
netket = { git = "https://github.com/netket/netket.git" }
